<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="time_separator">:</string>
    <string name="minute_label">Menit</string>
    <string name="second_label">Detik</string>
    <string name="start_timer_label">Start</string>
    <string name="cancel_timer_label">Cancel</string>
    <string name="current_session_label">Sesi ke: %d</string>
    <string name="currently_working_label">Sedang Bekerja</string>
    <string name="currently_resting_label">Sedang Istirahat</string>
    <string name="stop_label">Stop</string>
</resources>
